--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@ dist/
 # dependencies
 node_modules/
 
+# VSCode
+.vscode/
+.vscode/extensions.json
+.vscode/launch.json
+
 # logs
 npm-debug.log*
 yarn-debug.log*
