--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy documentation
+name: Github Pages Astro CI
 
 on:
   # Trigger the workflow every time you push to the `main` branch
@@ -7,12 +7,6 @@ on:
     branches: [ main ]
   # Allows you to run this workflow manually from the Actions tab on GitHub.
   workflow_dispatch:
-    inputs:
-      path:
-        description: 'Path to your Astro project'
-        required: true
-        default: './apps/docs'
-        type: string
   
 # Allow this job to clone the repo and create a page deployment
 permissions:
@@ -28,8 +22,11 @@ jobs:
         uses: actions/checkout@v2          
       - name: Install, build, and upload your site
         uses: withastro/action@v0
-        with:
-            path: /dist
+        # with:
+            # path: . # The root location of your Astro project inside the repository. (optional)
+            # node-version: 16 # The specific version of Node that should be used to build your site. Defaults to 16. (optional)
+            # package-manager: yarn # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
+
 
   deploy:
     needs: build
